[package]
name = "bartib"
version = "1.1.0"
authors = ["Nikolas Schmidt-Voigt <nikolas.schmidt-voigt@posteo.de>","Stephin Thomas <stephin_thomas@protonmail.com>"]
edition = "2024"
description = "A simple timetracker for the command line"
readme = "README.md"
homepage = "https://github.com/nikolassv/bartib"
repository = "https://github.com/nikolassv/bartib"
license = "GPL-3.0-or-later"
keywords = ["cli"]
categories = ["command-line-utilities"]

[package.metadata.wix]
upgrade-guid = "1D8348BE-1D47-4755-8D09-624AF8B092C3"
path-guid = "BE8CBFAC-1DE6-4B0D-BB4B-C31A85A34AC5"
license = false
eula = false

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.10.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "x86_64-pc-windows-msvc",
]
# Publish jobs to run in CI
pr-run-mode = "upload"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
clap = { version = "4.5.41", features = ["derive", "env"] }
nu-ansi-term = "0.50.1"
term_size = "0.3.2"
textwrap = "0.16.2"
thiserror = "2.0.12"
wildmatch = "2.4.0"

[features]
# Timestamps are recorded with second precision instead of the default minute precision
second-precision = []

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
